test/e2e/features/agentgateway/testdata/agw-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: basic-http-route
  namespace: agentgateway-base
  labels:
    example: basic-http-route
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "www.example.com"
  rules:
    - name: default
      backendRefs:
        - name: backend
          port: 80
